
[package]
name = "scara-manager"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui_extras = "0.27.2"
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime"]}
prost = "0.12.6"
tokio = { version = "1.38.0" , features = ["full"]}
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
